--- a/fullstack-c3/module3/conFusion/app/views/home.html
+++ b/fullstack-c3/module3/conFusion/app/views/home.html
@@ -6,7 +6,20 @@
                 <h3 align=center>Our Lipsmacking Culinary Creations</h3>
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
-				<h4>Implement the Featured Dish Here</h4>
+                <div class="media">
+                    <div class="media-left">
+                        <a ui-sref="app.dishdetails({id: featuredDish._id})">
+                            <img class="media-object img-thumbnail" ng-src={{featuredDish.image}} alt="{{featuredDish.name}}">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h2 class="media-heading">{{featuredDish.name}}
+                            <span class="label label-danger">{{featuredDish.label}}</span>
+                            <span class="badge">{{featuredDish.price | currency}}</span>
+                        </h2>
+                        <p>{{featuredDish.description}}</p>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -17,7 +30,20 @@
                 <h3 align=center>This Month's Promotions</h3>
             </div>
             <div class="col-xs-12 col-sm-9">
-				<h4>Implement the Promotion Here</h4>
+                <div class="media">
+                    <div class="pull-right">
+                        <a href="">
+                            <img class="media-object img-thumbnail" ng-src={{promotion.image}} alt="{{promotion.name}}">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h2 class="media-heading">{{promotion.name}}
+                            <span class="label label-danger">{{promotion.label}}</span>
+                            <span class="badge">{{promotion.price | currency}}</span>
+                        </h2>
+                        <p>{{promotion.description}}</p>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -27,7 +53,17 @@
                 <h3 align=center>Meet our Culinary Specialists</h3>
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
-				<h4>Implement the Executive Chef Info Here</h4>
+                <div class="media">
+                    <div class="media-left">
+                        <a>
+                        <img class="media-object img-thumbnail" ng-src={{specialist.image}} alt="{{specialist.name}}">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h3 class="media-heading">{{specialist.name}} <small>{{specialist.designation}}</small></h3>
+                        <p>{{specialist.description}}</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
