--- a/fullstack-c3/module4/conFusion/app/views/dishdetail.html
+++ b/fullstack-c3/module4/conFusion/app/views/dishdetail.html
@@ -41,9 +41,9 @@
                 <ul class="list-unstyled">
                 
                     <li><blockquote ng-show="commentForm.$valid && !commentForm.$pristine">
-                      <p>{{newComment.rating}} Stars</p>
-                      <p>{{newComment.comment}}</p>
-                      <footer>{{newComment.author}}, {{newComment.date | date}}</footer>
+                      <p>{{mycomment.rating}} Stars</p>
+                      <p>{{mycomment.comment}}</p>
+                      <footer>{{mycomment.author}}, {{mycomment.date | date}}</footer>
                     </blockquote></li>
                 </ul>
             <form class="form-horizontal" name="commentForm" ng-submit="submitComment()" novalidate>
@@ -51,7 +51,7 @@
                     <label for="author" class="col-sm-2 control-label">Your Name</label>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" id="author" name="author" placeholder="Enter Your Name"
-                        ng-model="newComment.author" required>
+                        ng-model="mycomment.author" required>
                         <span ng-show="commentForm.author.$error.required && !commentForm.author.$pristine" class="help-block">Your name is required.</span>
                     </div>
                 </div>
@@ -61,26 +61,26 @@
                     </div>
                     <div class="col-xs-12 col-sm-10">
                         <label class="radio-inline">
-                            <input type="radio" name="rating" ng-model="newComment.rating" value="1">1
+                            <input type="radio" name="rating" ng-model="mycomment.rating" value="1">1
                         </label>
                         <label class="radio-inline">
-                            <input type="radio" name="rating" ng-model="newComment.rating" value="2">2
+                            <input type="radio" name="rating" ng-model="mycomment.rating" value="2">2
                         </label>
                         <label class="radio-inline">
-                            <input type="radio" name="rating" ng-model="newComment.rating" value="3">3
+                            <input type="radio" name="rating" ng-model="mycomment.rating" value="3">3
                         </label>
                         <label class="radio-inline">
-                            <input type="radio" name="rating" ng-model="newComment.rating" value="4">4
+                            <input type="radio" name="rating" ng-model="mycomment.rating" value="4">4
                         </label>
                         <label class="radio-inline">
-                            <input type="radio" name="rating" ng-model="newComment.rating" value="5">5
+                            <input type="radio" name="rating" ng-model="mycomment.rating" value="5">5
                         </label>
                     </div>
                 </div>
                 <div class="form-group" ng-class="{ 'has-error' : commentForm.comments.$error.required && !commentForm.comments.$pristine }">
                     <label for="feedback" class="col-sm-2 control-label">Your Comments</label>
                     <div class="col-sm-10">
-                        <textarea class="form-control" rows="12" ng-model="newComment.comment" name="comments" required>
+                        <textarea class="form-control" rows="12" ng-model="mycomment.comment" name="comments" required>
                         </textarea>
                         <span ng-show="commentForm.comments.$error.required && !commentForm.comments.$pristine" class="help-block">Your comments are required.</span>
                     </div>
