--- a/fullstack-c3/module4/conFusion/app/views/home.html
+++ b/fullstack-c3/module4/conFusion/app/views/home.html
@@ -8,16 +8,16 @@
             <div class="col-xs-12 col-sm-9 col-sm-pull-3">
                 <div class="media">
                     <div class="media-left">
-                        <a ui-sref="app.dishdetails({id: featuredDish._id})">
-                            <img class="media-object img-thumbnail" ng-src={{featuredDish.image}} alt="{{featuredDish.name}}">
+                        <a ui-sref="app.dishdetails({id: dish._id})">
+                            <img class="media-object img-thumbnail" ng-src={{dish.image}} alt="{{dish.name}}">
                         </a>
                     </div>
                     <div class="media-body">
-                        <h2 class="media-heading">{{featuredDish.name}}
-                            <span class="label label-danger">{{featuredDish.label}}</span>
-                            <span class="badge">{{featuredDish.price | currency}}</span>
+                        <h2 class="media-heading">{{dish.name}}
+                            <span class="label label-danger">{{dish.label}}</span>
+                            <span class="badge">{{dish.price | currency}}</span>
                         </h2>
-                        <p>{{featuredDish.description}}</p>
+                        <p>{{dish.description}}</p>
                     </div>
                 </div>
             </div>
