--- a/fullstack-c3/module4/conFusion/app/views/dishdetail.html
+++ b/fullstack-c3/module4/conFusion/app/views/dishdetail.html
@@ -27,9 +27,9 @@
             <div class="col-xs-9 col-xs-offset-1">
               <label for="comments"><h4>Customer Comments</h4></label>
               <label style="padding-left: 25px; color: rgba(0,0,0,.5);" for="sort">Sort by:</label>
-              <input id="sort" type="text" ng-model="dish.orderText" placeholder="author, date, rating">
+              <input id="sort" type="text" ng-model="orderText" placeholder="author, date, rating">
                <ul id="comments" class="media-list">
-                <li class="media" ng-repeat="comment in dish.comments | orderBy:dish.orderText">
+                <li class="media" ng-repeat="comment in dish.comments | orderBy:orderText">
                     <div class="media-body">
                       <blockquote>
                         <p>{{comment.rating}} Stars</p>
