--- a/fullstack-c4/module2/ionic/conFusion/www/templates/dish-detail-popover.html
+++ b/fullstack-c4/module2/ionic/conFusion/www/templates/dish-detail-popover.html
@@ -1,6 +1,6 @@
 <ion-popover-view>
 	<ion-content scroll="false">
-		<div class="item">Add to Favorites</div>
+		<div class="item" ng-click="addFavorite(dish.id)">Add to Favorites</div>
 		<div class="item">Add Comment</div>
 	</ion-content>
 </ion-popover-view>
